# RustAnts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: ant.rs  components.rs  food.rs  home.rs  main.rs  menu.rs
src/ant/: pheromone.rs
