[package]
name = "rust_ants"
version = "0.1.1"
edition = "2021"

[dependencies]
bevy_egui = "0.16.1"
bevy_prototype_lyon = "0.6.0"
rand = "0.8.5"
min-max = "0.1.8"

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
   # Bevy functionality:
  "bevy_winit",         # Window management
  # "animation",          # Animation support
  # "filesystem_watcher", # Asset hot-reloading
  "x11",                # Linux: Support X11 windowing system
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit

  # Development/Debug features:
  # "dynamic",      # Dynamic linking for faster compile-times
  # "wgpu_trace",   # WGPU/rendering tracing
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
